--- a/family_acc/members/templates/all_members.html
+++ b/family_acc/members/templates/all_members.html
@@ -5,11 +5,11 @@
 {% endblock %}
 
 {% block content %}
-<div class="mycard">
+<div>
     <h1>Members</h1>
     <ul>
         {% for x in mymembers %}
-            <li><a href="details/{{x.id}}">{{x.firstname}} {{x.lastname}}</a></li>
+            <li><a href="details/{{x.slug}}">{{x.firstname}} {{x.lastname}}</a></li>
         {% endfor %}
     </ul>
 </div>
