--- a/family_acc/productionfiles/global.css
+++ b/family_acc/productionfiles/global.css
@@ -3,11 +3,11 @@ body {
   margin:0;
   font: 600 18px 'Source Sans Pro', sans-serif;
   letter-spacing: 0.64px;
-  color: #585d74;
+  color: #000000;
 }
-
+/* Header */
 .topnav {
-  background-color:#375BDC;
+  background-color:#1a1d2b;
   color:#ffffff;
   padding:10px;
 }
@@ -21,51 +21,24 @@ body {
   text-decoration: underline;
 }
 
-.mycard {
-  background-color: #f1f1f1;
-  background-image: linear-gradient(to bottom, #375BDC, #4D70EF); 
-  background-size: 100% 120px;
-  background-repeat: no-repeat;
-  margin: 40px auto;
-  width: 350px;
-  border-radius: 5px;
-  box-shadow: 0 5px 7px -1px rgba(51, 51, 51, 0.23); 
-  padding: 20px;
+.helptext {
+  font-weight: 100;
 }
 
-.mycard h1 {
-  text-align: center;
-  color:#ffffff;
-  margin:20px 0 60px 0;
+.errorlist {
+    color: #F00;
+    margin-left: 5rem;
 }
 
-ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+.errorlist li::marker {
+    color: #F00;
+    content: 'Ups... ';
 }
 
-li {
-  background-color: #ffffff;
-  background-image: linear-gradient(to right, #375BDC, #4D70EF); 
-  background-size: 50px 60px;
-  background-repeat: no-repeat;
-  cursor: pointer;
-  transition: transform .25s;
-  border-radius: 5px;
-  box-shadow: 0 5px 7px -1px rgba(51, 51, 51, 0.23);
-  padding: 15px;
-  padding-left: 70px;
-  margin-top: 5px;
-}
-
-li:hover {
-  transform: scale(1.1);
-}
 a:link, a:visited {
   color: #375BDC; 
 }
 .main, .main h1 {
   text-align:center;
-  color:#375BDC;
+  color:#08174e;
 }
