--- a/family_acc/members/templates/main.html
+++ b/family_acc/members/templates/main.html
@@ -1,4 +1,4 @@
-{% extends "master.html" %}
+{% extends "layout.html" %}
 
 {% block title %}
     The club
@@ -6,7 +6,7 @@
     
 {% block content %}
 <div class="main">
-    <h1>The Club</h1>
+    <h1>this is main.html</h1>
 </div>
 
 {% endblock %}
