--- a/family_acc/members/templates/register.html
+++ b/family_acc/members/templates/register.html
@@ -1,4 +1,4 @@
-{% extends "master.html" %}
+{% extends "layout.html" %}
 
 {% block title %}
     Registration
@@ -8,14 +8,10 @@
 <div class="registration">
     <h1>Registration</h1>
 
-    <form action="/register/" method="post">
+    <form action="/members/register/" method="post">
         {{form}}
         {% csrf_token %}
         <button class="button">Submit</button>
-    </form>
-    
-    {% comment %}
-    {% endcomment %}
+    </form>   
 </div>
-
 {% endblock %}
