--- a/family_acc/templates/404.html
+++ b/family_acc/templates/404.html
@@ -5,6 +5,6 @@
 {% endblock %}
 
 {% block content %}
-    <h1> ERROR 404 </h1>
-    <p>Looks like there is nothing to see...</p>
+    <h1> 404 </h1>
+    <p>Hm...Looks like there is nothing to see...</p>
 {% endblock %}
