--- a/family_acc/templates/test.html
+++ b/family_acc/templates/test.html
@@ -3,8 +3,8 @@
 {% block title %}
     Test
 {% endblock %}
-    
-{% block content %}
-    <h1>Test page</h1>
 
+{% block content %}
+    <h1> Hello </h1>
+    <p>This is TESTING page</p>
 {% endblock %}
