--- a/family_acc/members/templates/login.html
+++ b/family_acc/members/templates/login.html
@@ -7,13 +7,13 @@
 {% block content %}
 <div class="login">
     <h1>Login</h1>
-    <form action="{% url 'members:login' %}" method="post">
+    <form class="form-with-validation" action="{% url 'members:login' %}" method="post">
         {% csrf_token %}
         {{form}}
         {% if request.GET.next %}
             <input type="hidden" name="next" value="{{ request.GET.next }}" />
         {% endif %}
-        <button class="button">Submit</button>
+        <button class="form-submit">Submit</button>
     </form>
 </div>
 {% endblock %}
