--- a/family_acc/templates/layout.html
+++ b/family_acc/templates/layout.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <link rel="stylesheet" href="{% static 'global.css' %}" />
 <head>
+    <link rel="icon" href="{% static 'favicon.gif' %}" type="image/gif">
     <title>
         {% block title %}
         {% endblock %}
@@ -31,6 +32,8 @@
 </body>
 <footer>
     <br>
-    2025. Dmytro Yakovenko.
+    
+    <address> by Dmytro Yakovenko.<br>  2025. </address>
+    <a href="mailto:dmitry.yakovenko@gmail.com">Send email</a>
 </footer>
 </html>
