--- a/family_acc/members/templates/details.html
+++ b/family_acc/members/templates/details.html
@@ -10,7 +10,10 @@
     <p>Name: {{mymember.first_name}}</p>
     <p>Last Name: {{mymember.last_name}}</p>
     <p>Email: {{mymember.email}}</p>
-    <p>Joined_date: {{mymember.date_joined}}</p>    
+    <p>Joined_date: {{mymember.date_joined}}</p>
+    <button>Edit</button>
+    <button>Delete</button>
 </div>
+
 
 {% endblock %}
