--- a/family_acc/transactions/templates/transaction_list.html
+++ b/family_acc/transactions/templates/transaction_list.html
@@ -14,18 +14,14 @@
             <th> Amount </th>
             <th> Currency </th>
             <th> Category </th>
-            <th> Remark </th>
-            <th> Created by </th>
         </tr>
         {% for item in data%}
             <tr>
-                <td> <a href="edit/{{item.id}}" title="push to edit"> {{item.date|date:"d-m-Y"}} </a></td>
+                <td> <a href="transaction_edit/{{item.id}}" title="push to edit"> {{item.date|date:"d-m-Y"}} </a></td>
                 <td> {{item.account}} </td>
                 <td> {{item.amount}} </td>
                 <td> {{item.currency}} </td>
                 <td> {{item.category}} </td>
-                <td> {{item.remark}} </td>
-                <td> {{item.created_by}} </td>
             </tr>
         {% endfor %}
     </table>  
