--- a/family_acc/staticfiles/global.css
+++ b/family_acc/staticfiles/global.css
@@ -1,29 +1,89 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 1em;
+}
+
 body {
-  margin:0;
   font: 600 18px 'Source Sans Pro', sans-serif;
   letter-spacing: 0.64px;
-  color: #000000;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-areas:
+    "header"
+    "menu"
+    "content"
+    "details"
+    "footer";
+  background-color: white;
+  gap: 10px;  
+}
+
+.header {
+  grid-area: header;
+  background-color: rgb(36, 35, 36);
+  text-align: center;
+  color: #ffffff;
+}
+
+.menu {
+  grid-area: menu;
+}
+
+.content {
+  grid-area: content;
+}
+
+.content > h1 {
+  font-size: 30px;
+  margin-bottom: 7px;
+}
+
+.content > p {
+  margin-bottom: 7px;
+}
+
+.details {
+  grid-area: details;
+  border: 1px solid #0099cc;
+  background-color: beige;
+  padding: 10px;
+}
+
+.footer {
+  grid-area: footer;
+  background-color: #0099cc;
+  color: #ffffff;
+  text-align: center;
+}
+
+
+@media (min-width: 680px) {
+  .header {grid-area: 1 / span 6;}
+  .menu {grid-area: 2 / span 1;}
+  .content {grid-area: 2 / span 4;}
+  .details {grid-area: 3 / span 6;}
+  .footer {grid-area: 4 / span 6;}
+}
+
+@media (min-width: 900px) {
+  .header {grid-area: 1 / span 6;}
+  .menu {grid-area: 2 / span 1;}
+  .content {grid-area: 2 / span 4;}
+  .details {grid-area: 2 / span 1;}
+  .footer {grid-area: 3 / span 6;}
+}
+
 
 form > div {
   margin: 30px;
-}
-
-/* Header */
-.topnav {
-  background-color:#1a1d2b;
-  color:#ffffff;
-  padding:10px;
-}
-
-.topnav a:link, .topnav a:visited {
-  text-decoration: none;
-  color: #ffffff; 
-}
-
-.topnav a:hover, .topnav a:active {
-  text-decoration: underline;
 }
 
 .helptext {
@@ -45,10 +105,6 @@ form > div {
     display: inline-block;
 }
 
-a:link, a:visited {
-  color: #375BDC; 
-}
-.main, .main h1 {
-  text-align:center;
-  color:#08174e;
+.header  a:visited {
+  color: white;
 }
