--- a/family_acc/transactions/templates/account_list.html
+++ b/family_acc/transactions/templates/account_list.html
@@ -1,20 +1,20 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Transactions
+    Accounts
 {% endblock %}
 
 {% block content %}
 <div>
-   <h1>Accounts of family {{item.family}}</h1>    
+   <h1>Accounts of family {{request.user.profile.family}}</h1>    
     <table>
         <tr>
             <th> Account </th>
-            <th> Balance </th>
+            <th> balance </th>
         </tr>
         {% for item in data%}
             <tr>
-                <td> <a href="edit/{{item.name}}" title="push to edit"> {{item.name}} </a></td>
+                <td> <a href="account_edit/{{item.id}}" title="push to edit"> {{item.name}} </a></td>
                 <td> {{item.balance}} </td>
             </tr>
         {% endfor %}
