--- a/family_acc/staticfiles/global.css
+++ b/family_acc/staticfiles/global.css
@@ -1,7 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600&display=swap');
+
+:root {
+  --color-text-dark: #333333;
+  --color-text-light: #FFFFFF;
+  --color-background-light: #FFFFFF; /* brigth background */
+  --color-background-dark: #3366CC; /* dark background */
+  --color-background-alt: #f2f2f2; /* Світло-сірий для чергування рядків */
+  --colof-hoover: #DDDDDD;
+
+  --color-income: #006100; /* income records */
+  --color-expense: #892321; /* expense records or error message*/
+  --color-error: #c00000; /* expense records or error message*/
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
+  color: var(--color-text-dark);
 }
 
 ul {
@@ -22,15 +37,21 @@ body {
     "content"
     "details"
     "footer";
-  background-color: white;
-  gap: 10px;  
+  background-color: var(--color-background-light);
+  gap: 10px;
 }
 
 .header {
   grid-area: header;
-  background-color: rgb(36, 35, 36);
+  background-color: var(--color-background-dark);
   text-align: center;
-  color: #ffffff;
+  color: var(--color-text-light);
+}
+
+.header form,
+.header a
+{
+  color: var(--color-text-light);
 }
 
 .menu {
@@ -52,15 +73,15 @@ body {
 
 .details {
   grid-area: details;
-  border: 1px solid #0099cc;
-  background-color: beige;
+  border: 1px solid var(--color-background-dark);
+  background-color: var(--color-background-alt);
   padding: 10px;
 }
 
 .footer {
   grid-area: footer;
-  background-color: #0099cc;
-  color: #ffffff;
+  background-color: var(--color-background-dark);
+  color: var(--color-text-light);
   text-align: center;
 }
 
@@ -77,7 +98,12 @@ body {
   .header {grid-area: 1 / span 6;}
   .menu {grid-area: 2 / span 1;}
   .content {grid-area: 2 / span 4;}
-  .details {grid-area: 2 / span 1;}
+  .details {
+    grid-area: 2 / span 1;
+    max-width: 250px;
+    width: 100%;
+    justify-self: end;
+  }
   .footer {grid-area: 3 / span 6;}
 }
 
@@ -91,13 +117,16 @@ form > div {
   font-weight: 100;
 }
 
+.success { color: var(--color-background-dark); }
+.error { color: var(--color-error); }
+
 .errorlist {
-    color: #F00;
+    color: var(--color-error);
     margin-left: 5rem;
 }
 
 .errorlist li::marker {
-    color: #F00;
+    color: var(--color-error);
     content: 'Ups... ';
 }
 
@@ -106,5 +135,30 @@ form > div {
 }
 
 .header  a:visited {
-  color: white;
+  color: var(--color-text-light);
 }
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+tr:nth-child(even){background-color: var(--color-background-alt);}
+
+tr:hover {background-color: var(--colof-hoover);}
+
+th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: var(--color-background-dark);
+  color: var(--color-text-light);
+}
+
+.income td{color: var(--color-income);}
+.expense td{color: var(--color-expense);}
