--- a/family_acc/members/templates/all_members.html
+++ b/family_acc/members/templates/all_members.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div>
-    <h1>List of family members</h1>
+    <h1>List of family {{mymembers.0.profile.family}} members</h1>
     <ul>
         {% for x in mymembers %}
             <li><a href="{{x.id}}" title="push to see details">{{x.username}} </a></li>
