--- a/family_acc/transactions/templates/transaction_create_expense.html
+++ b/family_acc/transactions/templates/transaction_create_expense.html
@@ -12,6 +12,7 @@
             <div>{{ form.date.label_tag }} {{ form.date }} </div>
             <div>{{ form.account.label_tag }} {{ form.account }} <a href="{% url 'transactions:account_create' %}">add account</a></div>
             <div>{{ form.amount.label_tag }}   {{ form.amount }} <span id="currency-info"></span></div>
+            {{ form.amount.errors }}
 
             <div>{{ form.category.label_tag }} {{ form.category }} <a href="{% url 'transactions:category_create' %}">add category</a></div>
             <div>{{ form.remark.label_tag }}   {{ form.remark }}</div>
