--- a/family_acc/templates/layout.html
+++ b/family_acc/templates/layout.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="menu">
-        </details>
+        <details class="menu-section">
             <summary>TRANSACTIONS</summary>
             <ul>
                 <li><a href="/transactions/transaction_list">List transactions</a></li>
@@ -38,30 +38,34 @@
                 <li><a href="/transactions/transaction_create_income">Add income</a></li>
             </ul>
         </details>
-        </details>
+        <details class="menu-section">
             <summary>ACCOUNTS</summary>
             <ul>
                 <li><a href="/transactions/account_list">List accounts</a></li>
                 <li><a href="/transactions/account_create">Create account</a></li>
             </ul>
         </details>
-                </details>
+        <details class="menu-section">
             <summary>CATEGORIES</summary>
             <ul>
                 <li><a href="/transactions/category_list">List categories</a></li>
                 <li><a href="/transactions/category_create">Create category</a></li>
             </ul>
         </details>
-                </details>
+        <details class="menu-section">
             <summary>CURRENCY</summary>
             <ul>
                 <li><a href="/transactions/currency_list">List currencies</a></li>
                 <li><a href="/transactions/currency_create">Create currency</a></li>
             </ul>
         </details>
-
-
-        <a href="/members">MY FAMILY</a><br>
+        <details class="menu-section">
+            <summary>MEMBERS</summary>
+            <ul>
+                <li><a href="/members">List family members</a></li>
+                <li><a href="/members/member_create">Create member record</a></li>
+            </ul>
+        </details>
     </div>
 
     <div class="content">
