--- a/family_acc/staticfiles/global.css
+++ b/family_acc/staticfiles/global.css
@@ -85,18 +85,44 @@ body {
   text-align: center;
 }
 
+/* style the summary to look like a nav heading */
+.menu .menu-section > summary {
+  cursor: pointer;
+  list-style: none;
+  padding: 6px 10px;
+  font-weight: 600;
+  user-select: none;
+}
+
+/* Mobile first - horisontal menu for with < 680 */
+.menu {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  align-items: flex-start;
+}
+
 
 @media (min-width: 680px) {
   .header {grid-area: 1 / span 6;}
-  .menu {grid-area: 2 / span 1;}
+  .menu {
+    grid-area: 2 / span 1;
+    /* usual veertical menu for */
+    display: inline;
+}
   .content {grid-area: 2 / span 4;}
   .details {grid-area: 3 / span 6;}
   .footer {grid-area: 4 / span 6;}
 }
 
+
 @media (min-width: 900px) {
   .header {grid-area: 1 / span 6;}
-  .menu {grid-area: 2 / span 1;}
+  .menu {
+    grid-area: 2 / span 1;
+    /* usual veertical menu for */
+    display: inline;
+  }
   .content {grid-area: 2 / span 4;}
   .details {
     grid-area: 2 / span 1;
