add_user_to_family

--- a/family_acc/templates/layout.html
+++ b/family_acc/templates/layout.html
@@ -33,37 +33,37 @@
         <details class="menu-section">
             <summary>TRANSACTIONS</summary>
             <ul>
-                <li><a href="/transactions/transaction_list">List transactions</a></li>
-                <li><a href="/transactions/transaction_create_expense">Add expence</a></li>
-                <li><a href="/transactions/transaction_create_income">Add income</a></li>
+                <li><a href="/transactions/transaction_list">List</a></li>
+                <li><a href="/transactions/transaction_create_expense">New expence</a></li>
+                <li><a href="/transactions/transaction_create_income">New income</a></li>
             </ul>
         </details>
         <details class="menu-section">
             <summary>ACCOUNTS</summary>
             <ul>
-                <li><a href="/transactions/account_list">List accounts</a></li>
-                <li><a href="/transactions/account_create">Create account</a></li>
+                <li><a href="/transactions/account_list">List</a></li>
+                <li><a href="/transactions/account_create">New</a></li>
             </ul>
         </details>
         <details class="menu-section">
             <summary>CATEGORIES</summary>
             <ul>
-                <li><a href="/transactions/category_list">List categories</a></li>
-                <li><a href="/transactions/category_create">Create category</a></li>
+                <li><a href="/transactions/category_list">List</a></li>
+                <li><a href="/transactions/category_create">New</a></li>
             </ul>
         </details>
         <details class="menu-section">
             <summary>CURRENCY</summary>
             <ul>
-                <li><a href="/transactions/currency_list">List currencies</a></li>
-                <li><a href="/transactions/currency_create">Create currency</a></li>
+                <li><a href="/transactions/currency_list">List</a></li>
+                <li><a href="/transactions/currency_create">New</a></li>
             </ul>
         </details>
         <details class="menu-section">
-            <summary>MEMBERS</summary>
+            <summary>MY_FAMILY </summary>
             <ul>
-                <li><a href="/members">List family members</a></li>
-                <li><a href="/members/member_create">Create member record</a></li>
+                <li><a href="/members">Members</a></li>
+                <li><a href="/members/member_create">New</a></li>
             </ul>
         </details>
     </div>
