--- a/family_acc/members/templates/all_members.html
+++ b/family_acc/members/templates/all_members.html
@@ -6,10 +6,10 @@
 
 {% block content %}
 <div>
-    <h1>List of family {{mymembers.0.profile.family}} members</h1>
+    <h1>Members of my family</h1>
     <ul>
         {% for x in mymembers %}
-            <li><a href="{{x.id}}" title="push to see details">{{x.username}} </a></li>
+            <li><a href="{{x.profile.uuid}}" title="push to see details">{{x.username}} </a></li>
         {% endfor %}
     </ul>
 </div>
