password_reset_email_via_comsole

--- a/family_acc/members/templates/details.html
+++ b/family_acc/members/templates/details.html
@@ -13,6 +13,12 @@
     <p>Joined_date: {{mymember.date_joined}}</p>
     <button>Edit</button>
     <button>Delete</button>
+
+    <a href="{% url 'accounts:password_change' %}">Change Password</a>
+{% comment "" %}
+
+{% endcomment %}
+    
 </div>
 
 
