--- a/family_acc/templates/registration/password_reset_complete.html
+++ b/family_acc/templates/registration/password_reset_complete.html
@@ -7,6 +7,6 @@
 {% block content %}
 <div class="login">
     <h2>Password changed</h2>
-    <a href="{% url 'members:login' %}">Login</a>
+    <a href="{% url 'login' %}">Login</a>
 </div>
 {% endblock %}
