--- a/family_acc/templates/registration/password_reset_form.html
+++ b/family_acc/templates/registration/password_reset_form.html
@@ -9,8 +9,14 @@
     <h2>Reset password</h2>
     <form method="post">
         {% csrf_token %}
-        {{ form }}
+
+        {{ form.email.errors }}
+      
+        <label for="id_email">Email address:</label>
+        {{ form.email }}
+
         <button type="submit">Send reset link</button>
     </form>
 </div>
+
 {% endblock %}
