--- a/family_acc/templates/registration/password_change_form.html
+++ b/family_acc/templates/registration/password_change_form.html
@@ -6,12 +6,12 @@
     
 {% block content %}
 <div class="login">
-    <h2>Change password</h2>
+    <h2>Changing password for {{user.get_username}}</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Change" />
     </form>
-    <a href="{% url 'dashboard' %}">Back to dashboard</a>
+
 </div>
 {% endblock %}
