--- a/family_acc/templates/registration/password_reset_confirm.html
+++ b/family_acc/templates/registration/password_reset_confirm.html
@@ -16,7 +16,7 @@
         </form>
     {% else %}
         <p>Invalid link.</p>
-        <a href="{% url 'members:password_reset' %}">Request new link</a>
+        <a href="{% url 'password_reset' %}">Request new link</a>
     {% endif %}
 </div>
 {% endblock %}
