--- a/family_acc/templates/registration/password_reset_done.html
+++ b/family_acc/templates/registration/password_reset_done.html
@@ -8,7 +8,7 @@
 <div class="login">
     <h2>Password reset link sent</h2>
     <p>Check your email.</p>
-    <a href="{% url 'members:login' %}">Back to login</a>
+    <a href="{% url 'login' %}">Back to login</a>
 
 </div>
 {% endblock %}
