--- a/family_acc/members/templates/member_edit.html
+++ b/family_acc/members/templates/member_edit.html
@@ -12,7 +12,8 @@
         <div>{{form.first_name.label_tag}} {{form.first_name}}</div>
         <div>{{form.last_name.label_tag}} {{form.last_name}}</div>
         <div>{{form.email.label_tag}} {{form.email}}</div>
-        <button class="form-submit">Save</button>
+        <button class="form-submit" name="action" value="save">Save</button>
+        <button class="form-submit" name="action" value="delete">Delete</button>
     </form>
     {% if mymember.username == user.get_username %}
         <a href="{% url 'password_change' %}">Change password</a>
