--- a/family_acc/templates/layout.html
+++ b/family_acc/templates/layout.html
@@ -35,7 +35,7 @@
             <summary>TRANSACTIONS</summary>
             <ul>
                 <li><a href="/transactions/transaction_list">List</a></li>
-                <li><a href="/transactions/transaction_create_expense">New expence</a></li>
+                <li><a href="/transactions/transaction_create_expense">New expense</a></li>
                 <li><a href="/transactions/transaction_create_income">New income</a></li>
             </ul>
         </details>
