--- a/family_acc/transactions/templates/account_list.html
+++ b/family_acc/transactions/templates/account_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div>
-   <h1>Accounts of family {{request.user.profile.family}}</h1>    
+   <h1>Accounts of {{request.user.username}}'s family</h1>    
     <table>
         <tr>
             <th> Account </th>
