--- a/family_acc/transactions/templates/currency_list.html
+++ b/family_acc/transactions/templates/currency_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div>
-   <h1>Currency used by family {{request.user.profile.family}}</h1>    
+   <h1>Currency of {{request.user.username}}'s family</h1>    
     <table>
         <tr>
             <th> Code </th>
