--- a/family_acc/transactions/templates/account_create.html
+++ b/family_acc/transactions/templates/account_create.html
@@ -6,6 +6,7 @@
 
 {% block content %}
     <h1> Create new account </h1>
+    <a href="/transactions/account_upload">or upload by csv</a>
 
     <section>
         <form class="form-with-validation" action="{% url 'transactions:account_create' %}" method="post" >
