--- a/family_acc/transactions/templates/category_list.html
+++ b/family_acc/transactions/templates/category_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div>
-   <h1>Categories of income/expenses used by family {{request.user.profile.family}}</h1>    
+   <h1>Categories of income/expenses of {{request.user.username}}'s family </h1>    
     <table>
         <tr>
             <th> Name </th>
